Fix target for registrar